fixing tooltip rendering issues on safari

--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ html, body {
 }
 
 .tooltip {
-    display: inline;
+    display: inline-block;
     position: relative;
 }
 
@@ -89,7 +89,7 @@ html, body {
     background: #333;
     background: rgba(0,0,0,.8);
     border-radius: 5px;
-    bottom: 26px;
+    bottom: 35px;
     color: #fff;
     content: attr(title);
     left: 20%;
@@ -100,9 +100,6 @@ html, body {
 }
 
 .tooltip:hover:before{
-    border: solid;
-    border-color: #333 transparent;
-    border-width: 6px 6px 0 6px;
     bottom: 20px;
     content: "";
     left: 50%;
